@@ -1,6 +1,6 @@
 <!--
   ~ HeadsUp Agile
-  ~ Copyright 2009-2012 Heads Up Development Ltd.
+  ~ Copyright 2009-2013 Heads Up Development Ltd.
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Affero General Public License as
@@ -23,7 +23,8 @@
       <img wicket:id="activity-year" alt="monthly activity graph" class="activitygraph" />
       <img wicket:id="activity-month" alt="yearly activity graph" class="activitygraph" />
 
-      <wicket:container wicket:id="m2">moredetails</wicket:container>
+      <wicket:container wicket:id="m2">m2details</wicket:container>
+      <wicket:container wicket:id="xcode">xcodedetails</wicket:container>
 
       <br />
       <wicket:enclosure child="projectlist">
