@@ -1,0 +1,41 @@
+<!--
+  ~ HeadsUp Agile
+  ~ Copyright 2013 Heads Up Development Ltd.
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU Affero General Public License as
+  ~ published by the Free Software Foundation, either version 3 of the
+  ~ License, or (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU Affero General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU Affero General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
+<html>
+  <body>
+    <wicket:panel>
+      <table class="moredetails listing">
+        <tr>
+          <th colspan="2">CocoaPod Dependencies</th>
+        </tr>
+        <tr>
+          <th>Name</th>
+          <th>Version</th>
+        </tr>
+        <tr wicket:id="dependencies">
+          <td>
+            <span wicket:id="dependency-name">name</span>
+          </td>
+          <td>
+            <span wicket:id="dependency-version">version</span>
+          </td>
+        </tr>
+      </table>
+    </wicket:panel>
+  </body>
+</html>
